Fix horizontal view on mobile. Styling adjustments.

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@ border-radius: 0;
         width: 85%;
     }
 }
+@media only screen and (max-width: 1024px) {
+    .app{
+        padding: 0 10px;
+    }
+}
 @media only screen and (max-width: 1024px), only screen and (max-height: 579px) {
     .wrapper {
         padding: 0 5px;
