--- a/src/components/ContactSection.css
+++ b/src/components/ContactSection.css
@@ -135,7 +135,10 @@ form label{
         margin: 10px 0;
     }
 }
-@media only screen and (max-height: 579px) {   
+@media only screen and (max-height: 579px) {
+    form{
+        max-width: 600px;
+    }   
     form input:nth-child(-n+3){
         height: 30px;
     }
