--- a/src/components/IntroGraphic.css
+++ b/src/components/IntroGraphic.css
@@ -148,21 +148,71 @@
     .intro-graphic-container{
         display: none;
     }
+    .intro-headline{
+        box-sizing: border-box;
+        width: 95vw;
+        /* background-color: antiquewhite; */
+        overflow: hidden;
+
+    }
     .intro-headline div{
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100%;
+        justify-content: center;
+        flex-wrap: nowrap;
         text-align: center;
+        word-break: keep-all;
         margin: 0;
         padding: 0;
         line-height: 2em;
-        font-size: 26vw;
+        font-size: 27.5vw;
+        overflow: hidden;
+        white-space: nowrap;
     } 
    .intro-headline span:nth-child(2){
-        font-size: 70vw;
+        font-size: 2.8em;
+        letter-spacing: 1px;
         line-height: 0;
         padding: 0;
-        margin: 14vw 0 10vw;
+        margin: 13.8vw 0 9vw;
     }
 } 
+
+@media only screen and (max-height: 579px) {
+    .intro-graphic-container{
+        height: 150px;
+    }
+    .eyes{
+        width: 45px;
+        height: 20px;
+    }
+    .eye1{
+        left: 8px;
+        width: 10px;
+        height: 10px;
+    }
+    .eye2{
+        right: 8px;
+        width: 7px;
+        height: 7px;
+    }
+    .pupil1{
+        width: 3px;
+        height: 3px;
+    }
+    .pupil2{
+        width: 2.7px;
+        height: 2.7px;
+    }
+
+    .intro-headline div{
+        font-size: 3em;
+    }
+    .intro-headline p{
+        font-size: 1.3em;
+    }
+    .intro-headline p:nth-child(1){
+        margin-top: 0;
+    }
+}
